<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".NewsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/parentLay"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_news"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/demo_img" />

        <TextView
            android:id="@+id/cat_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/squre_shape"
            android:gravity="bottom"
            android:paddingVertical="5dp"
            android:paddingStart="7dp"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title"
            android:textColor="@color/redis"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/info_news"
            >


            <TextView
                android:id="@+id/reporting_news"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginHorizontal="10sp"
                android:gravity="bottom"
                android:text="@string/reporting_news"
                android:textColor="@color/lightDark"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/time_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:gravity="bottom"
                android:text="@string/time_date"
                android:textColor="@color/lightDark"
                android:textSize="11sp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/des_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/des"
                    android:textColor="@color/redis"
                    android:textSize="16sp" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        app:rippleColor="@color/golapi"
        android:src="@drawable/microphone"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/flootingbtn" />

</RelativeLayout>