<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card"
    android:layout_margin="20dp"
    android:elevation="5dp"
    android:id="@+id/card_lay"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/card_cover"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="-8dp"
        app:srcCompat="@drawable/demo_img"
        android:layout_alignParentTop="true"
        app:shapeAppearanceOverlay="@style/CustomSpecificCornerCut"
        />

    <TextView
        android:id="@+id/card_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/right_redius"
        android:padding="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="8sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:padding="2dp"
        android:layout_margin="2dp"
        >
        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="14sp"
            android:layout_marginBottom="1dp"
            />

        <TextView
            android:id="@+id/card_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/des"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="10sp"
            />

    </LinearLayout>


</RelativeLayout>